fixed padding overflow for user expenses

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,6 +108,7 @@ body {
 .user-balance-sheet {
   background-color: #eee;
   color: #000;
+  box-sizing: border-box;
   width:100%;
   padding: 5px 20px;
   font-size: 0.9rem;
